Fix sign in and register page height and text

--- a/register.html
+++ b/register.html
@@ -166,7 +166,7 @@
 
     </header>
 
-    <main id="sign-in-main">
+    <main class="sign-in-register-main" id="register-main">
         <div class="sign-in-container">
             <form class="sign-in-form" action="">
                 <div class="input-fields">
@@ -179,11 +179,12 @@
                     <a href="register.html" aria-label="Register" class="register-btn">Register</a>
                     <a href="signin.html" aria-label="Sign in instead" class="sign-in-btn">Sign in</a>
                 </div>
+                <div class="coming-soon-text"></div>
             </form>
         </div>
     </main>
 
-    <footer>
+    <footer class="sign-in-footer" id="sign-in-footer">
         <div class="footer-links-group">
             <p class="footer-link"><a href="#header" aria-label="Back to top">Home</a></p>
             <p class="footer-link"><a href="about.html" aria-label="About page">About</a></p>
