--- a/signin.html
+++ b/signin.html
@@ -166,7 +166,7 @@
 
     </header>
 
-    <main id="sign-in-main">
+    <main class="sign-in-register-main" id="sign-in-main">
         <div class="sign-in-container">
             <form class="sign-in-form" action="">
                 <div class="input-fields">
@@ -177,13 +177,14 @@
                     <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
                     <a href="register.html" aria-label="Register instead" class="register-btn">Register</a>
                 </div>
+                <div class="coming-soon-text"></div>
             </form>
         </div>
     </main>
 
-    <footer>
+    <footer class="sign-in-footer" id="sign-in-footer">
         <div class="footer-links-group">
-            <p class="footer-link"><a href="#header" aria-label="Back to top">Home</a></p>
+            <p class="footer-link"><a href="index.html" aria-label="Home page">Home</a></p>
             <p class="footer-link"><a href="about.html" aria-label="About page">About</a></p>
             <p class="footer-link"><a href="signin.html" aria-label="Sign in">Sign in</a></p>
         </div>
