--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                         <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
                         <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
                         <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
-                        <li class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
+                        <li class="dropdown-item"><a href="collectives.html"
+                                aria-label="Troupes and collectives">Troupes
                                 and collectives</a></li>
                         <li class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></li>
                         <li class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
@@ -68,7 +69,8 @@
                         <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     </button>
                     <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
-                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></li>
+                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a>
+                        </li>
                         <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
                         <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
                         <li class="dropdown-item"><a href="hammock.html"
@@ -90,11 +92,11 @@
                     <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
                 </li>
                 <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
-                <div class="search-items">
-                    <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
-                </div>
             </ul>
-            <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+            <div class="desktop-nav-search-items">
+                <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
+                <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
+            </div>
         </nav>
 
         <!-- mobile menu -->
@@ -114,7 +116,8 @@
                         <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
                         <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
                         <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
-                        <li class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
+                        <li class="dropdown-item"><a href="collectives.html"
+                                aria-label="Troupes and collectives">Troupes
                                 and collectives</a></li>
                         <li class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></li>
                         <li class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
@@ -148,7 +151,8 @@
                     </button>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <ul class="dropdown-container" id="dropdown-container">
-                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></li>
+                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a>
+                        </li>
                         <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
                         <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
                         <li class="dropdown-item"><a href="hammock.html"
@@ -850,12 +854,12 @@
             </div>
         </div>
 
-        <h1 class="cards-category map-h1"><a href="studiomap.html" aria-label="Map of studios">Studios around the world</a>
+        <h1 class="cards-category map-h1"><a href="studiomap.html" aria-label="Map of studios">Studios around the
+                world</a>
         </h1>
         <div class="map-card-container">
             <div class="map-card">
-                <a href="studiomap.html" aria-label="Map of studios"><img class="index-map-img"
-                        src="assets/placeholder.jpg"></a>
+                <img class="index-map-img" src="assets/placeholder.jpg">
             </div>
             <div class="index-map-text">
                 <p class="map-text-top">Explore our map of aerial and pole studios around the world, with more than
