Fix about page layout and coming soon text

--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
 
     </header>
 
-    <main id="main" class="about-main">
+    <main id="about-main" class="about-main">
         <img class="about-item-img" src="assets/placeholder.jpg" alt="About page featured image">
         <div class="about-text">
             <h2 class="about-h2">The Aerial Arts Hub</h2>
