Add meta descriptions

--- a/health.html
+++ b/health.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find health resources for aerialists and pole dancers around the world, from physiotherapists to flexibility training">
     <title>Circus physios, flexibility resources and more | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
