--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find aerial and pole studios around the world, polewear brands, qualified coaches and performers, circus events and more">
     <title>The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
@@ -859,7 +860,7 @@
         </h1>
         <div class="map-card-container">
             <div class="map-card">
-                <img class="index-map-img" src="assets/placeholder.jpg">
+                <img class="index-map-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
             </div>
             <div class="index-map-text">
                 <p class="map-text-top">Explore our map of aerial and pole studios around the world, with more than
