--- a/photography.html
+++ b/photography.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find specialist aerial and pole photographers and videographers in your area and around the world">
     <title>Aerial and pole photographers and videographers | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
