--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Aerial Arts Hub is a platform for the aerial and pole community
+    to discover studios, coaches, performers, brands, and other useful resources all over the world">
     <title>About | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
