--- a/allresources.html
+++ b/allresources.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find aerial and pole resources, from studios around the world to polewear brands and an encyclopedia of aerial and pole skills">
     <title>Aerial and pole resources | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
