--- a/allskills.html
+++ b/allskills.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The encyclopedia of aerial and pole skills, across all apparatuses, from beginner to advanced">
     <title>Aerial and pole skills | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
