--- a/festivals.html
+++ b/festivals.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find aerial, pole and circus festivals in your area and around the world">
     <title>Aerial, pole and circus festivals around the world | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
