--- a/hoop.html
+++ b/hoop.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="An encylopedia of aerial hoop or lyra skills, from beginner to advanced">
     <title>Aerial hoop skills | Lyra skills | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
