--- a/otherskills.html
+++ b/otherskills.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="An encyclopedia of specialty aerial apparatus skills">
     <title>Specialty aerial skills | Aerial specialty apparatus moves | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
