--- a/pole.html
+++ b/pole.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="An encylopedia of pole dance skills, from beginner to advanced">
     <title>Pole dance skills | Pole fitness skills | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
