--- a/signin.html
+++ b/signin.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sign into The Aerial Arts Hub">
     <title>Sign in | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
