--- a/studiomap.html
+++ b/studiomap.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Browse the map of aerial and pole studios around the world">
     <title>Map of aerial and pole studios around the world | The Aerial Arts Hub</title>
     <link rel="stylesheet" href="styles.css">
     </link>
