--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find aerial and pole studios around the world, polewear brands, qualified coaches and performers, circus events and more">
     <title>The Aerial Arts Hub</title>
-    <link rel="stylesheet" href="styles.css">
-    </link>
+    <link rel="stylesheet" href="styles.css"></link>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
 </head>
 
 <body>
@@ -22,6 +22,16 @@
         <!-- desktop nav -->
 
         <nav class="desktop-menu" id="desktop-menu">
+            <div class="desktop-social-links">
+                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="desktop-social-icon" src="assets/instagram.svg" alt="Instagram profile"></a>
+                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="desktop-social-icon" src="assets/substack.png" alt="Substack newsletter"></a>
+                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="desktop-social-icon" src="assets/email-outline.svg" alt="Send an email"></a>
+            </div>
+            <div class="desktop-nav-search-items">
+                <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
+                <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
+            </div>
+            
             <ul class="nav-links">
                 <li class="nav-item-div">
                     <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
@@ -94,10 +104,6 @@
                 </li>
                 <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
             </ul>
-            <div class="desktop-nav-search-items">
-                <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
-                <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
-            </div>
         </nav>
 
         <!-- mobile menu -->
@@ -181,6 +187,11 @@
                     <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
                     <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
                 </div>
+            </div>
+            <div class="nav-social-links">
+                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="nav-social-icon" src="assets/instagram.svg" alt="Instagram profile"></a>
+                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="nav-social-icon" src="assets/substack.png" alt="Substack newsletter"></a>
+                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="nav-social-icon" src="assets/email-outline.svg" alt="Send an email"></a>
             </div>
         </nav>
 
