--- a/otherresources.html
+++ b/otherresources.html
@@ -24,6 +24,16 @@
         <!-- desktop nav -->
 
         <nav class="desktop-menu" id="desktop-menu">
+            <div class="desktop-social-links">
+                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="desktop-social-icon" src="assets/instagram.svg" alt="Instagram profile"></a>
+                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="desktop-social-icon" src="assets/substack.png" alt="Substack newsletter"></a>
+                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="desktop-social-icon" src="assets/email-outline.svg" alt="Send an email"></a>
+            </div>
+            <div class="desktop-nav-search-items">
+                <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
+                <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
+            </div>
+            
             <ul class="nav-links">
                 <li class="nav-item-div">
                     <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
@@ -37,7 +47,8 @@
                         <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
                         <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
                         <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
-                        <li class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes
+                        <li class="dropdown-item"><a href="collectives.html"
+                                aria-label="Troupes and collectives">Troupes
                                 and collectives</a></li>
                         <li class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></li>
                         <li class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
@@ -71,7 +82,8 @@
                         <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     </button>
                     <ul class="desktop-dropdown-container" id="desktop-dropdown-container">
-                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></li>
+                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a>
+                        </li>
                         <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
                         <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
                         <li class="dropdown-item"><a href="hammock.html"
@@ -92,76 +104,97 @@
                 <li class="nav-item-div">
                     <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
                 </li>
-                <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>  
+                <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
             </ul>
-            <div class="desktop-nav-search-items">
-                <input type="search" class="search-bar" id="desktop-search-bar" placeholder="Search...">
-                <img src="assets/magnify.svg" class="search-icon" id="desktop-search-icon" alt="Search icon">
-            </div>
         </nav>
 
         <!-- mobile menu -->
 
         <nav class="mobile-menu" id="mobile-menu">
             <button class="closing-x" id="closing-x"><img src="assets/close.svg" alt="Close the menu"></button>
-    <div class="nav-links">
-        <div class="nav-item-div">
-            <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
-        </div>
-        <div class="nav-item-div">
-            <button class="nav-item" id="nav-item"><h2>Resources</h2></button>
-            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-            <div class="dropdown-container" id="dropdown-container">
-                <p class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></p>
-                <p class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></p>
-                <p class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></p>
-                <p class="dropdown-item"><a href="collectives.html" aria-label="Troupes and collectives">Troupes and collectives</a></p>
-                <p class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></p>
-                <p class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a></p>
-                <p class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></p>
-                <p class="dropdown-item"><a href="health.html" aria-label="Physios and flexibility resources">Physio and flexy</a></p>
-                <p class="dropdown-item"><a href="photography.html" aria-label="Photographers and videographers">Photography and video</a></p>
-                <p class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other resources</a></p>
-                <p class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a></p>
+            <ul class="nav-links">
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="studiomap.html" aria-label="Map of studios">Studio map</a></h2>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Resources</h2>
+                    </button>
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="studios.html" aria-label="Studios">Studios</a></li>
+                        <li class="dropdown-item"><a href="coaches.html" aria-label="Coaches">Coaches</a></li>
+                        <li class="dropdown-item"><a href="performers.html" aria-label="Performers">Performers</a></li>
+                        <li class="dropdown-item"><a href="collectives.html"
+                                aria-label="Troupes and collectives">Troupes
+                                and collectives</a></li>
+                        <li class="dropdown-item"><a href="retreats.html" aria-label="Retreats">Retreats</a></li>
+                        <li class="dropdown-item"><a href="competitions.html" aria-label="Competitions">Competitions</a>
+                        </li>
+                        <li class="dropdown-item"><a href="festivals.html" aria-label="Festivals">Festivals</a></li>
+                        <li class="dropdown-item"><a href="health.html"
+                                aria-label="Physios and flexibility resources">Physio and flexy</a></li>
+                        <li class="dropdown-item"><a href="photography.html"
+                                aria-label="Photographers and videographers">Photography and video</a></li>
+                        <li class="dropdown-item"><a href="otherresources.html" aria-label="Other resources">Other
+                                resources</a></li>
+                        <li class="dropdown-item"><a href="allresources.html" aria-label="See all resources">See all</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Brands</h2>
+                    </button>
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a>
+                        </li>
+                        <li class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></li>
+                        <li class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <button class="nav-item" id="nav-item">
+                        <h2>Skills</h2>
+                    </button>
+                    <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
+                    <ul class="dropdown-container" id="dropdown-container">
+                        <li class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a>
+                        </li>
+                        <li class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></li>
+                        <li class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></li>
+                        <li class="dropdown-item"><a href="hammock.html"
+                                aria-label="Hammock or sling skills">Hammock/sling</a></li>
+                        <li class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></li>
+                        <li class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps +
+                                rope</a></li>
+                        <li class="dropdown-item"><a href="otherskills.html"
+                                aria-label="Specialty aerial skills">Specialty</a></li>
+                        <li class="dropdown-item"><a href="allskills.html"
+                                aria-label="See all aerial and pole skills">See all</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a>
+                    </h2>
+                </li>
+                <li class="nav-item-div">
+                    <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
+                </li>
+            </ul>
+            <div class="nav-input">
+                <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
+                <div class="search-items">
+                    <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
+                </div>
             </div>
-        </div>
-        <div class="nav-item-div">
-            <button class="nav-item" id="nav-item"><h2>Shops</h2></button>
-            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-            <div class="dropdown-container" id="dropdown-container">
-                <p class="dropdown-item"><a href="clothing.html" aria-label="Aerial and poleweaer">Clothing</a></p>
-                <p class="dropdown-item"><a href="heels.html" aria-label="Pole heels">Heels</a></p>
-                <p class="dropdown-item"><a href="equipment.html" aria-label="Equipment">Equipment</a></p>
+            <div class="nav-social-links">
+                <a href="https://www.instagram.com/theaerialartshub/" target="_blank"><img class="nav-social-icon" src="assets/instagram.svg" alt="Instagram profile"></a>
+                <a href="https://theaerialartshub.substack.com/" target="_blank"><img class="nav-social-icon" src="assets/substack.png" alt="Substack newsletter"></a>
+                <a href="mailto:yaiza@theaerialartshub.com" target="_blank"><img class="nav-social-icon" src="assets/email-outline.svg" alt="Send an email"></a>
             </div>
-        </div>
-        <div class="nav-item-div">
-            <button class="nav-item" id="nav-item"><h2>Skills</h2></button>
-            <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
-            <div class="dropdown-container" id="dropdown-container">
-                <p class="dropdown-item"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></p>
-                <p class="dropdown-item"><a href="silks.html" aria-label="Silks skills">Silks</a></p>
-                <p class="dropdown-item"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></p>
-                <p class="dropdown-item"><a href="hammock.html" aria-label="Hammock or sling skills">Hammock/sling</a></p>
-                <p class="dropdown-item"><a href="pole.html" aria-label="Pole skills">Pole</a></p>
-                <p class="dropdown-item"><a href="straps.html" aria-label="Straps and rope skills">Straps + rope</a></p>
-                <p class="dropdown-item"><a href="otherskills.html" aria-label="Specialty aerial skills">Specialty</a></p>
-                <p class="dropdown-item"><a href="allskills.html" aria-label="See all aerial and pole skills">See all</a></p>
-            </div>
-        </div>
-        <div class="nav-item-div">
-            <h2 class="nav-item"><a href="events.html" aria-label="Aerial, pole and circus events">What's on</a></h2>
-        </div>
-        <div class="nav-item-div">
-            <h2 class="nav-item"><a href="about.html" aria-label="About page">About</a></h2>
-        </div>
-    </div>
-    <div class="nav-input">
-        <a href="signin.html" aria-label="Sign in" class="sign-in-btn">Sign in</a>
-        <div class="search-items">
-            <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
-            <img src="assets/magnify.svg" class="search-icon" id="search-icon" alt="Search icon">
-        </div>
-    </div>
         </nav>
 
     </header>
