Change divs to semantic tags

--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
 
     <main id="about-main" class="about-main">
         <img class="about-item-img" src="assets/placeholder.jpg" alt="About page featured image">
-        <div class="about-text">
+        <section class="about-text">
             <h2 class="about-h2">The Aerial Arts Hub</h2>
             <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
                 to discover studios, coaches, performers, brands, and other useful resources all over the world.
@@ -235,7 +235,7 @@
                 and sport, but we are also first and foremost a sex work-positive platform, and we will always
                 support and stand in solidarity with sex workers in the pole and aerial scene.
             </p>
-        </div>
+        </section>
     </main>
 
     <footer>
