--- a/allskills.html
+++ b/allskills.html
@@ -204,9 +204,9 @@
         <!-- Scroll cards category 1 -->
 
         <h1 class="cards-category"><a href="hoop.html" aria-label="Hoop or lyra skills">Hoop/lyra</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -220,9 +220,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -236,9 +236,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -252,9 +252,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -268,9 +268,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -284,21 +284,21 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="hoop.html" aria-label="See all hoop or lyra skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 2 -->
 
         <h1 class="cards-category"><a href="silks.html" aria-label="Silks skills">Silks</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -312,9 +312,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -328,9 +328,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -344,9 +344,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -360,9 +360,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -376,21 +376,21 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="silks.html" aria-label="See all silks skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 3 -->
 
         <h1 class="cards-category"><a href="trapeze.html" aria-label="Trapeze skills">Trapeze</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -404,9 +404,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -420,9 +420,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -436,9 +436,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -452,9 +452,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -468,21 +468,21 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="trapeze.html" aria-label="See all trapeze skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 4 -->
 
         <h1 class="cards-category"><a href="hammock.html" aria-label="Hammock or sling skills">Hammock/sling</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -496,9 +496,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -512,9 +512,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -528,9 +528,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -544,9 +544,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -560,21 +560,21 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="hammock.html" aria-label="See all hammock or sling skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 5 -->
 
         <h1 class="cards-category"><a href="pole.html" aria-label="Pole skills">Pole</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -588,9 +588,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -604,9 +604,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -620,9 +620,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -636,9 +636,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -652,21 +652,21 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="pole.html" aria-label="See all pole skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 6 -->
 
         <h1 class="cards-category"><a href="straps.html" aria-label="Straps and rope skills">Straps and rope</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -680,9 +680,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -696,9 +696,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -712,9 +712,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -728,9 +728,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -744,21 +744,21 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="straps.html" aria-label="See all straps and rope skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 7 -->
 
         <h1 class="cards-category"><a href="otherskills.html" aria-label="Specialty aerial skills">Specialty apparatus</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -772,9 +772,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -788,9 +788,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -804,9 +804,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -820,9 +820,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -836,14 +836,14 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="otherskills.html" aria-label="See all specialty aerial skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
     </main>
 
