--- a/hoop.html
+++ b/hoop.html
@@ -200,18 +200,18 @@
     </header>
 
     <main id="main lineup-main" class="lineup-main">
-        <div class="lineup-top">
+        <section class="lineup-top">
             <h1 class="lineup-h1">Find hoop/lyra skills</h1>
             <div class="lineup-search-items">
                 <input type="search" class="search-bar" id="lineup-search-bar" placeholder="Search...">
                 <img src="assets/magnify.svg" class="search-icon" id="lineup-search-icon" alt="Search icon">
             </div>
-        </div>
-        <div class="lineup-container" id="lineup-container">
+        </section>
+        <section class="lineup-container" id="lineup-container">
             <h1>All hoop/lyra skills</h1>
             <div class="filter-menu" id="filter-menu"></div>
             <div class="lineup-lineup">
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -221,9 +221,9 @@
                         <p class="lineup-info-text">Difficulty level</p>
                         <p class="lineup-info-text">Type and other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -233,9 +233,9 @@
                         <p class="lineup-info-text">Difficulty level</p>
                         <p class="lineup-info-text">Type and other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -245,9 +245,9 @@
                         <p class="lineup-info-text">Difficulty level</p>
                         <p class="lineup-info-text">Type and other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -257,9 +257,9 @@
                         <p class="lineup-info-text">Difficulty level</p>
                         <p class="lineup-info-text">Type and other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -269,9 +269,9 @@
                         <p class="lineup-info-text">Difficulty level</p>
                         <p class="lineup-info-text">Type and other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -281,10 +281,10 @@
                         <p class="lineup-info-text">Difficulty level</p>
                         <p class="lineup-info-text">Type and other info</p>
                     </div>
-                </div>
+                </article>
 
             </div>
-        </div>
+        </section>
     </main>
 
     <footer>
