--- a/studiomap.html
+++ b/studiomap.html
@@ -201,16 +201,16 @@
 
     <main id="main map-main" class="map-main">
         <h1 class="map-h1">Explore the studio map</h1>
-        <div class="lineup-search-items">
+        <section class="lineup-search-items">
             <input type="search" class="search-bar" id="lineup-search-bar" placeholder="Search...">
             <img src="assets/magnify.svg" class="search-icon" id="lineup-search-icon" alt="Search icon">
-        </div>
+        </section>
         <img class="map-card-item-img" id="map-card-item-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
-        <div class="lineup-container" id="lineup-container">
+        <section class="lineup-container" id="lineup-container">
             <h1>Featured studios</h1>
             <div class="filter-menu" id="filter-menu"></div>
             <div class="lineup-lineup">
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -220,9 +220,9 @@
                         <p class="lineup-info-text">City, country</p>
                         <p class="lineup-info-text">Other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -232,9 +232,9 @@
                         <p class="lineup-info-text">City, country</p>
                         <p class="lineup-info-text">Other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -244,9 +244,9 @@
                         <p class="lineup-info-text">City, country</p>
                         <p class="lineup-info-text">Other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -256,9 +256,9 @@
                         <p class="lineup-info-text">City, country</p>
                         <p class="lineup-info-text">Other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -268,9 +268,9 @@
                         <p class="lineup-info-text">City, country</p>
                         <p class="lineup-info-text">Other info</p>
                     </div>
-                </div>
+                </article>
 
-                <div class="lineup-item">
+                <article class="lineup-item">
                     <img class="lineup-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
                     <div class="lineup-info-box">
                         <div class="lineup-title-icon">
@@ -280,10 +280,10 @@
                         <p class="lineup-info-text">City, country</p>
                         <p class="lineup-info-text">Other info</p>
                     </div>
-                </div>
+                </article>
 
             </div>
-        </div>
+        </section>
     </main>
 
     <footer>
