--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
         <!-- Scroll cards category 1 -->
 
         <h1 class="cards-category"><a href="events.html" aria-label="Aerial and pole events">What's on</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -219,9 +219,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -236,9 +236,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -253,9 +253,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -270,9 +270,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -287,9 +287,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -304,9 +304,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -321,21 +321,21 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="events.html" aria-label="Aerial and pole events">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 2 -->
 
         <h1 class="cards-category"><a href="studios.html" aria-label="Aerial and pole studios">Find a studio</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -350,9 +350,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -367,9 +367,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -384,9 +384,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -401,9 +401,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -418,9 +418,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -435,9 +435,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -452,22 +452,22 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="studios.html" aria-label="Aerial and pole studios">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 3 -->
 
         <h1 class="cards-category"><a href="clothing.html" aria-label="Aerial and polewear">Discover pole & aerial
                 wear</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -482,9 +482,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -499,9 +499,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -516,9 +516,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -533,9 +533,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -550,9 +550,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -567,9 +567,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -584,22 +584,22 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="clothing.html" aria-label="Aerial and polewear">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 4 -->
 
         <h1 class="cards-category"><a href="allskills.html" aria-label="Aerial and pole skills">The skills
                 encyclopedia</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -614,9 +614,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -631,9 +631,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -648,9 +648,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -666,9 +666,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -683,9 +683,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -701,9 +701,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -719,22 +719,22 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="allskills.html" aria-label="Aerial and pole skills">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <!-- Scroll cards category 5 -->
 
         <h1 class="cards-category"><a href="allresources.html" aria-label="See all resources">Discover more
                 resources</a></h1>
-        <div class="scroll-cards">
+        <section class="scroll-cards">
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -747,9 +747,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -763,9 +763,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -779,9 +779,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -794,9 +794,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -810,9 +810,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -825,9 +825,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -841,9 +841,9 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
-            <div class="card">
+            <article class="card">
                 <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
                 <div class="card-info">
                     <div class="name-and-icon">
@@ -857,19 +857,19 @@
                         <button class="item-tag">Tag</button>
                     </div>
                 </div>
-            </div>
+            </article>
 
             <div class="arrow-see-all-container">
                 <a href="allresources.html" aria-label="See all resources">
                     <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
                 </a>
             </div>
-        </div>
+        </section>
 
         <h1 class="cards-category map-h1"><a href="studiomap.html" aria-label="Map of studios">Studios around the
                 world</a>
         </h1>
-        <div class="map-card-container">
+        <section class="map-card-container">
             <div class="map-card">
                 <img class="index-map-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
             </div>
@@ -882,7 +882,7 @@
                         aria-label="Instagram account">Instagram</a> to get them added to the map.
                 </h5>
             </div>
-        </div>
+        </section>
 
     </main>
 
